istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-demo-vs
  namespace: demo
spec:
  hosts:
    - "acme.jcostabe.com"
  gateways:
    - demo-gateway
  http:
    - route:
      - destination:
          host: go-demo-svc 
          port:
            number: 8080
